--- a/_includes/blocks/app-header.html
+++ b/_includes/blocks/app-header.html
@@ -1,32 +1,23 @@
-<div class="top-bar clearfix">
-  <div class="top-bar__left">
-    <div class="top-bar__item top-bar__itemMenu">
-      <i class="main-nav__toggle"></i>
-    </div>
-    <div class="top-bar__item top-bar__itemTitle">
-      <h1>Dashboard</h1>
+<div class="app-navigator cf">
+  <div class="app-navigator__left">
+    <div class="app-navigator__item" data-action="open-left-panel">
+      <h1><a href="#">छ Dashboard</a></h1>
     </div>
   </div>
-  <div class="top-bar__right">
-    <div class="top-bar__item top-bar__itemSearch">
-      <div class="search-box">
-        <input type="text" class="search-box__input">
-        <i class="search-box__submit"></i>
-      </div>
+  <div class="app-navigator__right">
+    <div class="app-navigator__item">
+      <a href="#">ञ</a>
     </div>
-    <div class="top-bar__item top-bar__itemCreate">
-      <i class="icon__create"></i>
-    </div>
-    <div class="top-bar__item top-bar__itemAccount">
-      <i class="icon__account"></i>
-      <span class="counter"></span>
+    <div class="app-navigator__item" data-action="open-right-panel">
+      <a href="#">ज</a>
     </div>
   </div>
 </div>
 
 <div class="breadcrumbs">
-  <div class="breadcrumb">
-    <div class="breadcrumb__selector">
+  <div class="breadcrumbs__item">
+    <div class="breadcrumbs__link"><span class="breadcrumbs__type">Bril</span> <span class="breadcrumbs__label">Jaarplan 2016 - Staf</span></div>
+    <div class="breadcrumbs__selector">
       <input type="input" placeholder="filter">
       <ul>
         <li>Dashboard</li>
@@ -37,10 +28,10 @@
         <li>Wiki</li>
       </ul>
     </div>
-    <span class="title"><span class="link">Bril</span> <span class="label">Jaarplan 2016 - Staf</span></span>
   </div>
-  <div class="breadcrumb">
-    <div class="breadcrumb__selector">
+  <div class="breadcrumbs__item">
+    <div class="breadcrumbs__link"><span class="breadcrumbs__type">Doelstelling</span> <span class="breadcrumbs__label">De aanbevelingen van Audit Vlaanderen m.b.t. organisatiebeheersing uitvoeren</span></div>
+    <div class="breadcrumbs__selector">
       <input type="input" placeholder="filter">
       <ul>
         <li>Dashboard</li>
@@ -51,10 +42,10 @@
         <li>Wiki</li>
       </ul>
     </div>
-    <span class="title"><span class="link">Doelstelling</span> <span class="label">De aanbevelingen van Audit Vlaanderen m.b.t. organisatiebeheersing uitvoeren</span></span>
   </div>
-  <div class="breadcrumb">
-    <div class="breadcrumb__selector">
+  <div class="breadcrumbs__item">
+    <div class="breadcrumbs__link"><span class="breadcrumbs__type">Project</span> <span class="breadcrumbs__label">D06.0/P03 - Een monitoringsysteem uitbouwen voor de opvolging en bijsturing van</span></div>
+    <div class="breadcrumbs__selector">
       <input type="input" placeholder="filter">
       <ul>
         <li>Dashboard</li>
@@ -65,10 +56,10 @@
         <li>Wiki</li>
       </ul>
     </div>
-    <span class="title"><span class="link">Project</span> <span class="label">D06.0/P03 - Een monitoringsysteem uitbouwen voor de opvolging en bijsturing van</span></span>
   </div>
-  <div class="breadcrumb">
-    <div class="breadcrumb__selector">
+  <div class="breadcrumbs__item">
+    <div class="breadcrumbs__link"><span class="breadcrumbs__type">Mijlpaal</span> <span class="breadcrumbs__label">M01 - Processen varend erfgoed</span></div>
+    <div class="breadcrumbs__selector">
       <input type="input" placeholder="filter">
       <ul>
         <li>Dashboard</li>
@@ -79,6 +70,5 @@
         <li>Wiki</li>
       </ul>
     </div>
-    <span class="title"><span class="link">Mijlpaal</span> <span class="label">M01 - Processen varend erfgoed</span></span>
   </div>
 </div>
