--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -14,3 +14,6 @@
 
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/app.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/root.js"></script>
+
+<!-- COMPONENTS -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/breadcrumbs.js"></script>
