--- a/_includes/main.html
+++ b/_includes/main.html
@@ -11,7 +11,7 @@
       </div>
 
       <main class="app__container">
-        <header class="app__header">
+        <header class="app-header cf">
           {% include blocks/app-header.html %}
         </header>
 
