--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,8 +3,8 @@
   {% include head.html %}
 
   <body>
-    {% include home.html %}
+    {% include main.html %}
 
-    {% include js_files.html %}
+    {% include foot.html %}
   </body>
 </html>
