--- a/sass/app.scss
+++ b/sass/app.scss
@@ -32,17 +32,15 @@ textarea {
 	}
 }
 
-.clearfix:before,
-.clearfix:after,
-.cf:before,
-.cf:after {
-	content: '';
-	display: table;
+.clearfix,
+.cf {
+	&::after {
+		content: '';
+		display: table;
+		clear: both;
+	}
 }
-.clearfix:after,
-.cf:after {
-	clear: both;
-}
+
 .hidden {
 	position: absolute;
 	overflow: hidden;
@@ -265,221 +263,6 @@ body.fixed {
 
   overflow: hidden;
 }
-
-.app__header {
-  position: relative;
-  padding: 5px 20px;
-}
-.app__header:after {
-  content: '';
-  display: table;
-  clear: both;
-}
-
-
-
-
-
-.top-bar {
-  color: #FFF;
-}
-.top-bar__left {
-  float: left;
-  cursor: pointer;
-}
-.top-bar__right {
-  float: right;
-}
-.top-bar__item {
-  position: relative;
-  display: inline-block;
-  padding: 10px;
-}
-.top-bar__itemMenu {
-  padding: 10px 0;
-}
-.top-bar__itemMenu .main-nav__toggle {
-  position: relative;
-  top: 3px;
-  font-size: 20px;
-  color: #FFF;
-  cursor: pointer;
-  padding: 1px;
-  line-height: 1;
-}
-.top-bar__itemMenu .main-nav__toggle:before {
-    content: "\e120";
-    font-family: 'pmx';
-}
-
-.top-bar__itemTitle h1 {
-  font-size: 18px;
-  font-weight: 400;
-  color: #FFF;
-}
-
-.top-bar__itemSearch {
-
-}
-.top-bar__itemCreate {
-  cursor: pointer;
-}
-.top-bar__itemAccount {
-  cursor: pointer;
-}
-.top-bar__itemSearch .search-box {
-  position: relative;
-  width: 300px;
-}
-.top-bar__itemSearch .search-box .search-box__input {
-  position: relative;
-  display: inline-block;
-  width: 100%;
-  background-color: #214676;
-  border-radius: 15px;
-  font-size: 18px;
-  padding: 3px 12px 3px 38px;
-  font-weight: 300;
-}
-.top-bar__itemSearch .search-box .search-box__input:focus + .search-box__submit {
-  color: #FFF;
-}
-.top-bar__itemSearch .search-box .search-box__submit {
-  position: absolute;
-  top: 6px;
-  left: 14px;
-  color: #9191af;
-  transition: all .3s ease-in-out;
-}
-.top-bar__itemSearch .search-box .search-box__submit:before {
-  content: "\e036";
-  font-family: 'pmx';
-}
-.top-bar__itemCreate .icon__create:before {
-  content: '\e114';
-  font-family: 'pmx';
-}
-.top-bar__itemAccount .icon__account:before {
-  content: '\e074';
-  font-family: 'pmx';
-}
-
-
-
-
-
-.app__header .breadcrumbs {
-  position: relative;
-  display: inline-block;
-  margin: 0 10px;
-  clear: both;
-  float: left;
-  transition: all .3s ease-in-out;
-    color: #8c8ba5;
-}
-.app__header .breadcrumbs:hover {
-    color: #EEE;
-}
-.app__header .breadcrumbs .breadcrumb {
-  position: relative;
-  display: inline-block;
-}
-.app__header .breadcrumbs .breadcrumb:not(:first-child) {
-  margin: 0 0 0 14px;
-}
-.app__header .breadcrumbs .breadcrumb.active {
-  z-index: 99999999;
-  color: #FFF;
-  opacity: 1;
-}
-.app__header .breadcrumbs .breadcrumb.active::before {
-    color: #8c8ba5;
-}
-.app__header .breadcrumbs .breadcrumb.active .breadcrumb__selector {
-  opacity: 1;
-  pointer-events: auto;
-  top: 20px;
-}
-
-.app__header .breadcrumbs .breadcrumb .breadcrumb__selector {
-  position: absolute;
-  top: -10px;
-  left: 7px;
-  background-color: #FFF;
-  z-index: 9999;
-  box-shadow: 0 0 100px rgba(0,0,0,.2);
-  min-width: 250px;
-
-  transition: all .3s ease-in-out;
-
-  opacity: 0;
-  pointer-events: none;
-}
-.app__header .breadcrumbs .breadcrumb .breadcrumb__selector input {
-  width: 100%;
-  padding: 10px 12px;
-  box-shadow: 0 5px 50px rgba(0,0,0,.2);
-  color: #000;
-}
-.app__header .breadcrumbs .breadcrumb .breadcrumb__selector ul {
-
-}
-.app__header .breadcrumbs .breadcrumb .breadcrumb__selector ul li {
-    padding: 10px 12px;
-    font-size: 16px;
-    color: #000;
-    cursor: pointer;
-    transition: all .2s ease-in-out;
-    height: 40px;
-}
-.app__header .breadcrumbs .breadcrumb .breadcrumb__selector ul li:nth-of-type(odd) {
-  background-color: #F2F2F2;
-}
-.app__header .breadcrumbs .breadcrumb .breadcrumb__selector ul li:hover {
-  background-color: rgba(13, 74, 134, 1);
-  color: #FFF;
-}
-.app__header .breadcrumbs .breadcrumb:not(:first-child):before {
-    content: '/';
-    position: absolute;
-    top: -2px;
-    left: -12px;
-    line-height: 20px;
-    font-size: 16px;
-}
-.app__header .breadcrumbs .breadcrumb .title {
-    font-size: 14px;
-    font-weight: 400;
-}
-.app__header .breadcrumbs .breadcrumb.active .title,
-.app__header .breadcrumbs .breadcrumb .title:hover {
-    opacity: 1;
-}
-
-.app__header .breadcrumbs .breadcrumb .title .link {
-    position: relative;
-    display: inline-block;
-    border: 1px solid;
-    border-radius: 10px;
-    padding: 0px 6px;
-    text-transform: uppercase;
-    cursor: pointer;
-    top: -3px;
-    font-size: 10px;
-}
-.app__header .breadcrumbs .breadcrumb .title .link:hover {
-    transition: all .3s ease-in-out;
-    color: #FFF;
-}
-.app__header .breadcrumbs .breadcrumb .title .label {
-    display: inline-block;
-    white-space: nowrap;
-    max-width: 200px;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    line-height: 16px;
-}
-
 
 
 
