--- a/sass/shared.scss
+++ b/sass/shared.scss
@@ -6,12 +6,16 @@
 @import "reset.css";
 @import "app.css";
 
+// Blocks
+@import "blocks/appHeader.css";
+
 // Plugins
 @import "plugin/tabs.css";
 @import "plugin/sticky.css";
 @import "plugin/hideScrollbars.css";
 
 // Components
+@import "components/breadcrumbs.css";
 @import "components/multiSelector.css";
 @import "components/selector.css";
 @import "components/itemBox.css";
