--- a/_includes/blocks/app-header.html
+++ b/_includes/blocks/app-header.html
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="app-navigator__right">
-    <div class="app-navigator__item">
+    <div class="app-navigator__item" data-action="open-semsearch">
       <a href="#">ञ</a>
     </div>
     <div class="app-navigator__item" data-action="open-right-panel">
