--- a/_includes/blocks/notifications.html
+++ b/_includes/blocks/notifications.html
@@ -14,21 +14,33 @@
       <div class="itemBoxTable">
         <div class="itemBoxTable__body">
           <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--action">ढ</div>
+              </li>
               <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                   <div class="itemBoxTable__bodyCellInner ">Home</div>
               </li>
           </ul>
           <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--action">ण</div>
+              </li>
               <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                   <div class="itemBoxTable__bodyCellInner ">My To Do's</div>
               </li>
           </ul>
           <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--action">झ</div>
+              </li>
               <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                   <div class="itemBoxTable__bodyCellInner ">Time sheets</div>
               </li>
           </ul>
           <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--action">ऌ</div>
+              </li>
               <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                   <div class="itemBoxTable__bodyCellInner ">Reports</div>
               </li>
@@ -41,16 +53,25 @@
       <div class="itemBoxTable">
         <div class="itemBoxTable__body">
           <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--action">ट</div>
+              </li>
               <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                   <div class="itemBoxTable__bodyCellInner ">Help</div>
               </li>
           </ul>
           <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--action">ड</div>
+              </li>
               <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                   <div class="itemBoxTable__bodyCellInner ">Settings</div>
               </li>
           </ul>
           <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
+                  <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--action">त</div>
+              </li>
               <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                   <div class="itemBoxTable__bodyCellInner ">Logout</div>
               </li>
