--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,3 +1,10 @@
+<!-- POPUPS -->
+
+<!-- POPUP: MAIN SEARCH -->
+{% include popups/semsearch.html %}
+
+
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <!-- ALL FOR TABS -->
@@ -16,4 +23,5 @@
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/root.js"></script>
 
 <!-- COMPONENTS -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/semsearch.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/breadcrumbs.js"></script>
