--- a/sass/components/multiSelector.scss
+++ b/sass/components/multiSelector.scss
@@ -20,92 +20,21 @@
     top: 0;
     right: 0;
     padding: 0 20px;
+
+    .itemBoxFilter {
+      box-shadow: 0 20px 100px 0 rgba(0, 0, 0, 0.7);
+    }
+
+    .itemBoxTable {
+      box-shadow: 0 20px 100px 0 rgba(0, 0, 0, 0.7);
+    }
   }
 
   &__box {
     margin: 0 0 15px;
-    box-shadow: 0 0 80px 10px rgba(0,0,0,.7);
 
     &:last-child {
       margin: 0;
-    }
-  }
-
-  &__search {
-    position: relative;
-    height: 40px;
-    background-color: #FFF;
-
-    &Input {
-      width: 100%;
-      height: 100%;
-      padding: 5px 40px 5px 15px;
-      font-size: 16px;
-
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-
-      &::-webkit-input-placeholder {
-        font-style: italic;
-        font-weight: 400;
-        color: rgba(0,0,0,.35);
-      }
-
-      &:-webkit-autofill {
-        -webkit-box-shadow: 0 0 0 50px #FFF inset;
-      }
-
-      &::-ms-clear {
-      	display: none;
-      }
-    }
-
-    &Icon {
-      position: absolute;
-      top: 0;
-      right: 0;
-      width: 40px;
-      height: 40px;
-      color: #285C9E;
-      text-decoration: none;
-      font-size: 20px;
-      padding: 5px;
-
-      &::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        right: 40px;
-        width: 30px;
-        height: 100%;
-        background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, #FFF 90%, #FFF 100%);
-        pointer-events: none;
-        z-index: 99;
-      }
-
-      &::after {
-        content: "\e036";
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-      }
-    }
-
-    &Selected {
-      position: absolute;
-      top: 0;
-      left: 0;
-      max-width: calc(100% - 40px);
-      padding: 6px 0 6px 15px;
-      white-space: nowrap;
-      overflow: hidden;
-
-      .pmx-selector {
-        margin-right: 2px;
-        max-width: 300px;
-      }
     }
   }
 }
@@ -120,7 +49,7 @@
   transition: opacity .3s ease-in-out;
 }
 
-.pmx-selector.pmx-welector--clicked + .multiSelector {
+.pmx-selector.pmx-selector--clicked + .multiSelector {
   z-index: 99999999;
   pointer-events: auto;
   opacity: 1;
