--- a/_includes/blocks/notifications.html
+++ b/_includes/blocks/notifications.html
@@ -15,7 +15,9 @@
         <div class="itemBoxTable__body">
           <ul class="itemBoxTable__bodyRow">
               <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
-                  <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--action">ढ</div>
+                  <div class="itemBoxTable__bodyCellInner">
+                    <i class="itemBoxTable__action">ढ</i>
+                  </div>
               </li>
               <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                   <div class="itemBoxTable__bodyCellInner ">Home</div>
@@ -23,7 +25,9 @@
           </ul>
           <ul class="itemBoxTable__bodyRow">
               <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
-                  <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--action">ण</div>
+                  <div class="itemBoxTable__bodyCellInner">
+                    <i class="itemBoxTable__action">ण</i>
+                  </div>
               </li>
               <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                   <div class="itemBoxTable__bodyCellInner ">My To Do's</div>
@@ -31,7 +35,9 @@
           </ul>
           <ul class="itemBoxTable__bodyRow">
               <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
-                  <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--action">झ</div>
+                  <div class="itemBoxTable__bodyCellInner">
+                    <i class="itemBoxTable__action">झ</i>
+                  </div>
               </li>
               <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                   <div class="itemBoxTable__bodyCellInner ">Time sheets</div>
@@ -39,7 +45,9 @@
           </ul>
           <ul class="itemBoxTable__bodyRow">
               <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
-                  <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--action">ऌ</div>
+                  <div class="itemBoxTable__bodyCellInner">
+                    <i class="itemBoxTable__action">ऌ</i>
+                  </div>
               </li>
               <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                   <div class="itemBoxTable__bodyCellInner ">Reports</div>
@@ -54,7 +62,9 @@
         <div class="itemBoxTable__body">
           <ul class="itemBoxTable__bodyRow">
               <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
-                  <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--action">ट</div>
+                  <div class="itemBoxTable__bodyCellInner">
+                    <i class="itemBoxTable__action">ट</i>
+                  </div>
               </li>
               <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                   <div class="itemBoxTable__bodyCellInner ">Help</div>
@@ -62,7 +72,9 @@
           </ul>
           <ul class="itemBoxTable__bodyRow">
               <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
-                  <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--action">ड</div>
+                  <div class="itemBoxTable__bodyCellInner">
+                    <i class="itemBoxTable__action">ड</i>
+                  </div>
               </li>
               <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                   <div class="itemBoxTable__bodyCellInner ">Settings</div>
@@ -70,7 +82,9 @@
           </ul>
           <ul class="itemBoxTable__bodyRow">
               <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
-                  <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--action">त</div>
+                  <div class="itemBoxTable__bodyCellInner">
+                    <i class="itemBoxTable__action">त</i>
+                  </div>
               </li>
               <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                   <div class="itemBoxTable__bodyCellInner ">Logout</div>
