--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,8 @@
   {% include head.html %}
 
   <body>
-    {{content}}
+    {{ content }}
 
-    {% include js_files.html %}
+    {% include foot.html %}
   </body>
 </html>
