--- a/sass/blocks/appHeader.scss
+++ b/sass/blocks/appHeader.scss
@@ -3,7 +3,7 @@
 
 .app-header {
 	position: relative;
-	padding: 5px 20px;
+	padding: 10px 20px 5px;
 	background-color: #2C5386;
   color: #FFF;
 }
@@ -22,7 +22,7 @@
 	&__item {
 	  position: relative;
 	  display: inline-block;
-	  padding: 10px;
+	  padding: 5px 10px;
 		font-size: 24px;
 	}
 
