--- a/_includes/blocks/app-header.html
+++ b/_includes/blocks/app-header.html
@@ -7,6 +7,7 @@
   <div class="app-navigator__right">
     <div class="app-navigator__item" data-action="open-semsearch">
       <a href="#">ञ</a>
+      {% include popups/semsearch.html %}
     </div>
     <div class="app-navigator__item" data-action="open-right-panel">
       <a href="#">ज</a>
