--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,10 +1,3 @@
-<!-- POPUPS -->
-
-<!-- POPUP: MAIN SEARCH -->
-{% include popups/semsearch.html %}
-
-
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <!-- ALL FOR TABS -->
@@ -21,6 +14,10 @@
 
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/app.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/root.js"></script>
+
+<!-- PLUGINS -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/toggle-panels.js"></script>
 
 <!-- COMPONENTS -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/semsearch.js"></script>
