--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,10 +4,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
-  
-  <title>PMX Desktop Mockup</title>
+
+  <title>{{ page.title }}</title>
 
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i" rel="stylesheet">
+
+  <link rel="stylesheet" href="{{ site.baseurl }}/sass/old-pmx.css">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="{{ site.baseurl }}/sass/shared.css">
 </head>
