--- a/sass/components/itemBox.scss
+++ b/sass/components/itemBox.scss
@@ -23,6 +23,7 @@
 
   &Filter {
     position: relative;
+    font-size: 18px;
 
     &__input {
       position: relative;
@@ -301,11 +302,6 @@
           overflow: hidden;
           text-overflow: ellipsis;
           color: #000;
-
-          &--action {
-            padding: 0;
-            text-align: center;
-          }
 
           .pmx-selector {
             top: -1px;
