--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i" rel="stylesheet">
 
   <link rel="stylesheet" href="{{ site.baseurl }}/sass/old-pmx.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/sass/old-pmx-temp.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="{{ site.baseurl }}/sass/shared.css">
