--- a/sass/reset.scss
+++ b/sass/reset.scss
@@ -228,9 +228,12 @@ input[type="number"]::-webkit-outer-spin-button {
 input[type="search"] {
   -webkit-appearance: textfield;
 }
+input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
   -webkit-appearance: none;
+  display: none;
 }
 fieldset {
   padding: .35em .625em .75em;
