--- a/sass/old-pmx-temp.scss
+++ b/sass/old-pmx-temp.scss
@@ -12,6 +12,10 @@ body {
   font-size: 14px;
 }
 
+.pagebody-container {
+  background-color: #4692C3;
+}
+
 .tabline {
   background-color: #2C5386;
 }
