Dashboard is a separate block right now

--- a/_includes/blocks/app-header.html
+++ b/_includes/blocks/app-header.html
@@ -1,7 +1,10 @@
 <div class="app-navigator cf">
   <div class="app-navigator__left">
     <div class="app-navigator__item" data-action="open-left-panel">
-      <h1><a href="#">छ Dashboard</a></h1>
+      <h1><a href="#">छ</a></h1>
+    </div>
+    <div class="app-navigator__item" data-action="open-dashboard">
+      <h1><a href="#">Dashboard</a></h1>
     </div>
   </div>
   <div class="app-navigator__right">
