itemboxChildren - transparent background

--- a/sass/components/itemBox.scss
+++ b/sass/components/itemBox.scss
@@ -15,7 +15,7 @@
 
   &--children {
     padding: 15px 0 15px 15px;
-    background-color: #808080;
+    background-color: transparent;
     opacity: 0;
 
     animation: fadeIn .3s linear forwards;
