--- a/_includes/blocks/notifications.html
+++ b/_includes/blocks/notifications.html
@@ -1,10 +1,9 @@
   <div class="notifications__userInfo">
+    <div class="notifications__userInfoName">
+      <span class="notifications__userInfoLongName">Nick De Jaeger Nick De Jaeger Nick De Jaeger Nick De Jaeger</span>
+    </div>
     <div class="notifications__userInfoAvatar">
       <img src="assets/images/profile.jpg" alt="profile picture">
-    </div>
-    <div class="notifications__userInfoName">
-      <span class="notifications__userInfoFirstName">Nick</span>
-      <span class="notifications__userInfoLastName">De Jaeger</span>
     </div>
   </div>
 
