--- a/sass/app.scss
+++ b/sass/app.scss
@@ -233,10 +233,10 @@ body.fixed {
 .notifications__userInfoAvatar {
   position: relative;
   display: inline-block;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   vertical-align: top;
-  margin: 0 8px 0 0;
+  margin: 0 0 0 8px;
 }
 .notifications__userInfoAvatar img {
   border-radius: 100%;
