--- a/_includes/blocks/app-header-no-breadcrumb.html
+++ b/_includes/blocks/app-header-no-breadcrumb.html
@@ -1,10 +1,10 @@
 <div class="app-navigator cf">
   <div class="app-navigator__left">
-    <div class="app-navigator__item" data-action="open-left-panel">
-      <h1><a href="#">छ</a></h1>
-    </div>
-    <div class="app-navigator__item" data-action="open-dashboard">
-      <h1><a href="#">Dashboard</a></h1>
+    <div class="app-navigator__item">
+      <h1>
+        <a href="#"  data-action="open-left-panel">छ</a>
+        <a href="#">Dashboard</a>
+      </h1>
     </div>
   </div>
   <div class="app-navigator__right">
