--- a/sass/blocks/appHeader.scss
+++ b/sass/blocks/appHeader.scss
@@ -3,7 +3,7 @@
 
 .app-header {
   position: relative;
-  padding: 10px 20px 5px;
+  padding: 10px 20px;
   background-color: #2C5386;
   color: #FFF;
 }
