fixed header and tab colors in pmx page

--- a/sass/blocks/appHeader.scss
+++ b/sass/blocks/appHeader.scss
@@ -4,7 +4,8 @@
 .app-header {
   position: relative;
   padding: 10px 20px;
-  background-color: #2C5386;
+  // background-color: #2C5386;
+  background-color: #285C9E;
   color: #FFF;
 }
 
