header background is only changed in the old app

--- a/sass/blocks/appHeader.scss
+++ b/sass/blocks/appHeader.scss
@@ -4,9 +4,11 @@
 .app-header {
   position: relative;
   padding: 10px 20px;
-  // background-color: #2C5386;
-  background-color: #285C9E;
+  background-color: #2C5386;
   color: #FFF;
+}
+.old-app-header {
+  background-color: #285C9E;
 }
 
 .app-navigator {
