--- a/sass/components/multiSelector.scss
+++ b/sass/components/multiSelector.scss
@@ -19,6 +19,7 @@
     position: absolute;
     top: 0;
     right: 0;
+    width: 50vw;
 
     .itemBoxFilter {
       box-shadow: 0 20px 100px 0 rgba(0, 0, 0, 0.7);
