--- a/_includes/blocks/old-pmx-table.html
+++ b/_includes/blocks/old-pmx-table.html
@@ -69,7 +69,7 @@
                     <li class="column column14 level0 actionCol2 action action"><a class="toggle" id="listtools_filter" title="Toggle filter" tabindex="-1">&nbsp;</a></li>
                   </ul>
                 </li>
-                <li class="filter  invisible">
+                <li class="filter">
                   <div class="inlinefilter">
                     <table class="filtermode">
                       <tbody>
@@ -138,7 +138,7 @@
           </div>
     </div>
   </div>
-  <div class="pickerinput"><span class="noinput pickerfocusable" tabindex="0" style="width: 65px;">Invoiced, …</span><input type="text" value="" class="text invisible"></div>
+  <div class="pickerinput"><span class="noinput pickerfocusable" tabindex="0" style="width: 65px;"></span><input type="text" value="" class="text invisible"></div>
   <!-- pickerinput -->
 </div>
 </span>
@@ -434,7 +434,7 @@
           </div>
         </div>
         </div>
-        <div class="pickerinput"><span class="noinput pickerfocusable" tabindex="0" style="width: 92px;"> Financial milestones</span><input type="text" value="" class="text invisible"></div>
+        <div class="pickerinput"><span class="noinput pickerfocusable" tabindex="0" style="width: 92px;"></span><input type="text" value="" class="text invisible"></div>
         <!-- pickerinput -->
         </div>
         </span>
