added different table. added toggle for old popup

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -22,3 +22,6 @@
 <!-- COMPONENTS -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/semsearch.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/breadcrumbs.js"></script>
+
+<!-- OLD COMPONENTS -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/pmx/old-pmx-multiselect.js"></script>
