fixed filter background-color and textsize

--- a/_includes/blocks/old-pmx-table.html
+++ b/_includes/blocks/old-pmx-table.html
@@ -61,7 +61,7 @@
 </a></li>
                                     </ul>
                                 </li>
-                                <li class="filter">
+                                <li class="filter old-pmx-filter">
                                     <div class="inlinefilter">
                                         <table class="filtermode">
                                             <tbody>
@@ -326,7 +326,7 @@ Johnson</span></label></li>
 </td>
 <td id="anonymous_element_108" class="column column7 level0 large  colname_col_cf1122 text" style="width: 205px;"><span class="ipfTextField"><input id="anonymous_element_137" maxlength="40" class="ipfTextField-input text full" type="text" style="width: 194px;"><a href="javascript:void(0)" class="ipfTextField-emptyButton" title="Is empty"></a></span></td>
 <td id="anonymous_element_109"
-    class="column column8 level0 medium  colname_col_sf4 multipersonpicker" style="width: 141px;"><span id="anonymous_element_138"><div id="picker" class="solidinput haspicker" style="height: auto; width: 132px;" title="Arnaud S&amp;#39;Jongers, Esteban Sastre, Jonathan Langens"><div class="newpicker bottom open" id="anonymous_element_139">
+    class="column column8 level0 medium  colname_col_sf4 multipersonpicker" style="width: 141px;"><span id="anonymous_element_138"><div id="picker" class="solidinput haspicker" style="height: auto; width: 132px; font-size:14px;" title="Arnaud S&amp;#39;Jongers, Esteban Sastre, Jonathan Langens"><div class="newpicker bottom open" id="anonymous_element_139">
 
 
         <span class="newpickerbutton old-pmx-multiselect-trigger">&nbsp;</span>
