--- a/sass/old-pmx-temp.scss
+++ b/sass/old-pmx-temp.scss
@@ -43,3 +43,7 @@ body {
 .old-multiselect-popup--hidden {
   display: none !important;
 }
+
+.old-pmx-filter tr {
+  background-color: #E6E6E6 !important;
+}
